# financeTracker_SW

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: delivery.md  phase-1-architecture.md  phase-1-review.md  phase-2-architecture.md  spike-architecture-options.md
scripts/: spot_check.py
src/finance_copilot/: cli.py  config.py  db.py  log_config.py  ports.py
src/finance_copilot/models/: __init__.py  account.py  transaction.py
src/finance_copilot/repositories/: accounts.py  sync_runs.py  tokens.py  transactions.py
src/finance_copilot/sync/: incremental.py  mapping.py  orchestrator.py
src/finance_copilot/truelayer/: client.py  errors.py  oauth.py
tests/: conftest.py  spike_first_direct.py  test_cli.py  test_db_schema.py  test_incremental.py  test_log_config.py  test_mapping.py  test_models.py  test_oauth.py  test_orchestrator.py  test_repo_accounts.py  test_repo_sync_runs.py  test_repo_tokens.py  test_repo_transactions.py  test_spike_e2e.py  test_spike_first_direct.py  test_truelayer_client.py
tests/fixtures/: spike_first_direct_sandbox.json
